# acapy-plugin-template

./: README.md  pyproject.toml
.github/workflows/: code-quality-check.yml
docker/: Dockerfile  Dockerfile.test  README.md  default.yml
docker/scripts/: run_tests
int/: Dockerfile.test.runner  docker-compose.yml  pyproject.toml
int/tests/: conftest.py  test_delete_my.py
my_plugin/: __init__.py
tests/: conftest.py  test_setup.py
