[tool.poetry]
name = "my_plugin"
version = "0.1.0"
description = "ACA-Py Plugin Template"
authors = ["Your Name <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = {version = "^0.9.0rc0", allow-prereleases = true, extras = ["askar", "bbs"]}

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^6.0.0"
pre-commit = "^2.12.1"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
