[tool.poetry]
name = "acapy-plugin-template-int"
version = "0.1.0"
description = "Integration tests for ACA-Py Plugin Template"
authors = ["Your Name <example@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
acapy-client = {git="https://github.com/indicio-tech/acapy-client.git", branch="acapy/main"}
aries-staticagent = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
